bluec-tests/tests/valid/types_array/compound_initializer_for_scalar.c
int main(void)
{
    // Like clang/gcc, we allow this but emit a warning.
    int x = {1, 2, 3};
    return x;
}