bluec-tests/tests/invalid/types_longdouble/compound_mod_2.c
// Can't apply %= to a float
int main(void) {
    int i = 5;
    i %= 1.0L;
    return i;
}